--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ name = "daskrw"
 requires-python = ">=3.9"
 version = "0.1.0"
 
+[project.scripts]
+tozarr = "tozarr:main"
+
 [build-system]
 build-backend = "hatchling.build"
 requires = ["hatchling"]
