--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = ">=3.9"
 version = "0.1.0"
 
 [project.scripts]
-tozarr = "tozarr:main"
+tozarr = "daskrw.tozarr:main"
 
 [build-system]
 build-backend = "hatchling.build"
