--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "ExampleFlyMeas",
+      "name": "daskrw",
       "type": "python",
       "request": "launch",
       "python": "${env:CONDA_PREFIX}/bin/python",
